# BMEIIT-Project-Laboratory

./: .gitignore  CMakeLists.txt  LICENSE  README.md
framework/: CMakeLists.txt  application.cpp  application.h  camera.cpp  camera.h  framework.h  light.h  material.cpp  material.h  mesh.h  model.cpp  model.h  mouse.h  scene.cpp  scene.h  scenebuilder.h  shaderloader.h  shaderprogram.cpp  shaderprogram.h  texture.h  uniform.h  uniformregistry.h
framework/core/: camera.cpp  camera.h  light.cpp  light.h  lightarray.h  material.cpp  material.h  mesh.h  model.cpp  model.h
framework/message/: applicationmessage.h
framework/message/variants/: applicationerror.h  applicationinfo.h  applicationwarning.h
framework/opengl/: application.cpp  application.h  shaderbatch.h  shaderprogram.cpp  shaderprogram.h
framework/opengl/loader/: shaderloader.cpp  shaderloader.h  texture.cpp  texture.h
framework/opengl/render/: framebuffer.cpp  framebuffer.h  framebuffercube.cpp  rendertarget.h  rendertexture.cpp  rendertexture.h
framework/scene/: scene.cpp  scene.h  scenebuilder.h
framework/src/: config.h.in
framework/src/core/: camera.h  light.h  material.h  mesh.h
framework/src/message/: messagequeue.h
framework/src/opengl/: shaderprogram.cpp
framework/src/opengl/loader/: shaderloader.cpp  texture.cpp  texture.h
framework/src/opengl/render/: framebuffer.cpp  framebuffer.h  framebuffercube.cpp  framebuffercube.h  rendertarget.h
framework/src/scene/: scene.cpp
framework/src/threading/: jobpool.cpp  jobpool.h  threadpool.cpp  timer.h
framework/src/uniform/: uniformregistry.cpp  uniformsource.cpp  uniformsource.h
framework/src/utility/: dummytexture.h
framework/threading/: job.h  threadpool.h
framework/uniform/: uniform.h  uniformregistry.cpp  uniformregistry.h  uniformsource.cpp  uniformsource.h
framework/utility/: buffertexture.h  mouse.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cpp
src/code/glsl/: convolution-brdf-fs.glsl  convolution-fs.glsl  convolution-sh-cs.glsl  cook-torrance-fs.glsl  envmapped-fs.glsl  envmapped-vs.glsl  equirectangular-fs.glsl  gbuffer-fs.glsl  maxblinn-fs.glsl  postproc-fs.glsl  prefilter-fs.glsl  quad-vs.glsl  skinning-vs.glsl  sum-sh-cs.glsl
src/code/hdr/: hdrcube.h  hdrtexture.cpp  hdrtexture.h
src/code/loader/: assimpmaterial.h  assimpmesh.h  assimpmodel.cpp  assimpmodel.h
src/code/scene/: gmaterial.h  quadmesh.h
src/code/scene/builder/: builder3d.cpp  builder3d.h
src/glsl/: envmapped-fs.glsl  envmapped-vs.glsl  idle-vs.glsl  maxblinn-fs.glsl  trafo-vs.glsl  triangle-fs.glsl
src/glsl/diffuse/: diffuse-fs.glsl
src/loader/: assimpmaterial.h  assimpmesh.h  assimpmodel.cpp  assimpmodel.h
src/resources/: dummy
src/resources/assimp/revolver/: license.txt  scene.gltf
src/resources/assimp/showroom/the_phantom_rogue/: license.txt  scene.gltf
src/test/: builder2d.h  builder3d.cpp  builder3d.h  quadmesh.h  testmesh.h  triangle.h
